--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
 anyio==3.6.1
+certifi==2022.5.18.1
 click==8.1.3
+distlib==0.3.6
 dnspython==2.2.1
 email-validator==1.3.0
 fastapi==0.85.1
+filelock==3.8.0
+greenlet==1.1.3.post0
 h11==0.14.0
 idna==3.4
+packaging==21.3
+Pillow==9.2.0
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
 pydantic==1.10.2
+pyparsing==3.0.9
+pytesseract==0.3.10
+six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a29
+sqlmodel==0.0.8
 starlette==0.20.4
+toml==0.10.2
+tox==3.25.1
 typing_extensions==4.4.0
 uvicorn==0.18.3
+virtualenv==20.16.4
